--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "formik": "^2.4.6",
-    "next": "14.0.4",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
