--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,17 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
-    "next": "14.0.4",
+    "next": "^14.2.8",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "yup-password": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
