feat: build midtrans transaction

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -13,6 +13,6 @@
     }
   },
   // "include": ["src/**/*"],
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "src/helper/midtrans.js"],
   "exclude": ["node_modules"]
 }
