--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,6 +14,6 @@
     "types": ["./src/custom.d.ts"]
   },
   // "include": ["src/**/*"],
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "src/helper/midtrans.js"],
   "exclude": ["node_modules"]
 }
