--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "^14.2.8",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
