--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
