--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.15",
     "prisma": "^5.7.1",
     "tsc-alias": "^1.8.10",
