--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^6.9.15",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.15",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.7.1",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0"
