--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "^14.2.8",
@@ -26,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.13",
     "yup": "^1.4.0",
     "yup-password": "^0.4.0"
   },
@@ -41,7 +44,6 @@
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
