--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
+    "@types/node-schedule": "^2.1.7",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^10.0.0",
     "daisyui": "^4.12.10",
