--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "next": "^14.2.8",
     "query-string": "^9.1.0",
     "react": "^18",
+    "react-awesome-calendar": "^1.0.14",
     "react-datepicker": "^7.3.0",
     "react-dates": "^21.8.0",
     "react-day-picker": "^8.10.1",
@@ -64,5 +65,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "typescript": "^5"
-  }
+  },
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ]
 }
