--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
+    "husky": "^9.1.6",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
