--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "serve": "next start -p $PORT",
+    "serve": "next start -p 4082",
     "lint": "next lint",
     "test": "npx cypress verify & cypress run --component"
   },
